<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Xperia Service Menu</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="open_button">Open Service Menu</string>
    <string name="manually_open_button">Manually Open Service Menu</string>
    <string name="description">This app allows you to easily open the built-in service menu for Sony Xperia devices.\n\nThe service menu can be used to test the various components of the device, retrieve device information and retrieve/set configuration parameters.</string>
    <string name="action_info">Info</string>
    <string name="device_info">Device:</string>
    <string name="device_info_name" />
    <string name="device_info_name_error">ERROR: Unable to get device model name</string>

    <!-- HelpActivity.java -->
    <string name="help_activity_email_bug_report_subject">Bug Report: Grade Calculator</string>
    <string name="help_activity_email_bug_report_text">What can I help you with?\n</string>
    <string name="help_activity_email_feedback_subject">Feedback: Grade Calculator</string>
    <string name="help_activity_email_feedback_text">What can I help you with?\n</string>
    <string name="email_intent_chooser">Select email application</string>

    <!-- menu_help.xml -->
    <string name="action_report_a_problem">Report a Problem</string>
    <string name="action_give_feedback">Give Feedback</string>
    <string name="action_about">About</string>

    <!-- menu_main.xml -->
    <string name="action_help_and_feedback">About &amp; Feedback</string>
    <string name="action_settings">Settings</string>

    <!-- pref_help.xml -->
    <string name="pref_app">App</string>
    <string name="pref_app_description">Description</string>
    <string name="pref_app_description_summary">App that allows you to easily open your Xperia\'s service menu with a single tap instead of entering a long combination of numbers. The service menu allows you to view device configuration, software configuration and to perform tests of the various features available on your device.</string>
    <string name="pref_app_rate">Rate This App</string>
    <string name="pref_app_rate_summary">Go to Google Play Store</string>
    <string name="pref_app_source_code">Source Code</string>
    <string name="pref_app_version">Version</string>
    <string name="pref_app_version_summary">2.0.0</string>
    <string name="view_source_code_on_github">View source code on Github</string>
    <string name="disclaimer">Do not use this app if you are unsure of what you are doing. ThunderboltSoft will not be responsible for any damage that may occur to your phone as a result of improper use of the service menu.</string>
    <string name="shortcut_diagnostics_button">Shortcut to Diagnostics</string>
</resources>
